# eset-incident-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PROJECT_STATUS.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  harness.yaml  pyproject.toml
.claude/: settings.json
.claude/agents/: architect.md  final-reviewer.md  rag-reviewer.md  security-reviewer.md  threat-modeler.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  container-scan.yml  deploy.yml  eval.yml  security.yml
config/: agents.yaml  app.yaml  logging.yaml  policies.yaml  retrieval.yaml
config/prompts/: evidence_critic.jinja2  incident_analysis.jinja2  investigator.jinja2  notification_composer.jinja2  remediation_planner.jinja2  root_cause_analyst.jinja2  security_reviewer.jinja2
deploy/docker/: app.Dockerfile  worker.Dockerfile
docs/adr/: ADR-001-use-postgresql-pgvector.md  ADR-002-use-langgraph.md  ADR-003-human-approval-gate.md  ADR-004-llm-provider-abstraction.md
docs/architecture/: container-diagram.md  data-flow.md  system-context.md  threat-model.md  trust-boundaries.md
docs/runbooks/: collector-failure.md  discord-delivery-failure.md  embedding-failure.md  llm-provider-failure.md  token-compromise.md
migrations/: env.py
scripts/: backfill_pending_detection_approvals.py  check_eset_incidents.py  evaluate_agents.py  evaluate_rag.py  ingest_knowledge.py  notify_latest_eset_incidents.py  replay_incident.py  rotate_secrets.sh  search_knowledge.py  smoke_check.py
(+210 files in other folders)
