[project]
name = "eset-incident-ai"
version = "0.1.0"
description = "ESET incident RAG and agentic AI analysis system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "anthropic>=0.111.0",
  "celery>=5.4",
  "fastapi>=0.115",
  "httpx>=0.27",
  "jinja2>=3.1",
  "langgraph>=0.2",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "pgvector>=0.3",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "structlog>=24.4",
  "tenacity>=8.5",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7",
  "mypy>=1.11",
  "pip-audit>=2.7",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eset_incident_ai"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["eset_incident_ai"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
